commit by karan forgot passord and login user 25032024 night

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ShopBillInventory</string>
+    <string name="forgotpassword">Forgot Password</string>
+    <string name="pleasegotoemailtochnagepassword">Email is sent to gmail \n Please go to the Gmail to Change the Passord</string>
 </resources>
