--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,16 @@
     <string name="dashboard">Dashboard</string>
     <string name="billhistory">Bill History</string>
     <string name="BussInfo">Buss Info</string>
+    <string name="oneMonth">1 Month</string>
+    <string name="threeMonths">3 Month</string>
+    <string name="oneYear">1 Year</string>
+    <string name="oneMonthAmt">399</string>
+    <string name="ThreeMonthsAmt">1,099</string>
+    <string name="oneYearAmt">4,444</string>
+    <string name="onemonthDesc">This is valid for 28 days</string>
+    <string name="threemonthDesc">This is valid for 84 days</string>
+    <string name="oneyearDesc">This is valid for 364 days</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
